fix style when preedit is extremely long * horizontal: fill the hole * scroll: wrap preedit

--- a/page/common.scss
+++ b/page/common.scss
@@ -374,6 +374,11 @@ $color-transition: var(--color-transition, background-color 500ms ease, color 50
       border-end-end-radius: calc($candidate-height / 2 + $border-width);
     }
 
+    .fcitx-panel:has(.fcitx-horizontal-scroll) {
+      /* Apply to panel to restrict both candidates and preedit width. */
+      inline-size: calc($cell-width * var(--max-column, 6) + 10px /* 2px redundance + 8px scrollbar making default 400px */);
+    }
+
     .fcitx-candidate-inner, .fcitx-preedit, .fcitx-aux-down, .fcitx-menu-item {
       /* Make sure 🦦 takes equal width when vertical+vertical-rl. */
       min-block-size: $text-content-size;
@@ -485,7 +490,6 @@ $color-transition: var(--color-transition, background-color 500ms ease, color 50
 
     .fcitx-horizontal-scroll {
       max-block-size: calc(var(--max-row, 6) * $candidate-height); /* If block-size, 2 rows will have 90px each. */
-      inline-size: calc($cell-width * var(--max-column, 6) + 10px /* 2px redundance + 8px scrollbar making default 400px */);
       transition: var(--scroll-animation, max-block-size 300ms);
 
       .fcitx-candidate {
