--- a/page/generic.scss
+++ b/page/generic.scss
@@ -82,6 +82,10 @@
 
     .fcitx-divider {
       flex-direction: row;
+
+      &:last-child, &:has(+ .fcitx-divider-paging) {
+        display: none;
+      }
     }
   }
 
@@ -95,13 +99,26 @@
       display: flex;
     }
 
-    .fcitx-divider {
+  /* stylelint-disable-next-line no-descending-specificity */
+  .fcitx-divider {
       flex-direction: column;
 
       /* If the last row (either temporary with more candidates to come, or final when scroll ends)
       is not full, it takes care of the last gap. JS is responsible for full rows. */
       &:last-child {
         flex-grow: 1;
+      }
+
+      &:has(+ .fcitx-divider-paging) {
+        flex-grow: 1;
+
+        .fcitx-divider-middle {
+          block-size: 0;
+        }
+
+        .fcitx-divider-side {
+          flex-grow: 1;
+        }
       }
     }
   }
